# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md  profile.sh  time_stats.py
.github/workflows/: ci.yml  readme-stars.yml
data/examples/: 18-1.txt  18-2.txt  18-3.txt  21-1.txt  21-2.txt
src/: lib.rs
src/template/: mod.rs
