[package]
name = "advent_of_code"
version = "1.0.0"
authors = ["Marcelo Fornet <mfornet94@gmail.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
regex = "1.10.2"
aho-corasick = "1.1.2"
itertools = "0.12.0"
num_enum = "0.7.1"
num = "0.4.1"
indicatif = "0.17.7"
